For EN glms using worst model performance to select lambda.

--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "lesser-blink",
+   "id": "imported-florence",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m --------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------------------------------------ tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "polyphonic-facing",
+   "id": "bound-response",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "arbitrary-demographic",
+   "id": "purple-journalist",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3\n",
-    "save_lists <- TRUE"
+    "dset_idx <- 2\n",
+    "save_lists <- FALSE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "compliant-arlington",
+   "id": "incorporate-warren",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comfortable-ground",
+   "id": "dimensional-eating",
    "metadata": {},
    "source": [
     "# Functions"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "alleged-witch",
+   "id": "technical-capitol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "welsh-industry",
+   "id": "middle-homework",
    "metadata": {},
    "source": [
     "# Data"
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "pregnant-removal",
+   "id": "downtown-setting",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -134,7 +134,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -143,7 +143,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  baseMean = \u001b[32mcol_double()\u001b[39m,\n",
@@ -157,7 +157,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -167,7 +167,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  MI_est_median = \u001b[32mcol_double()\u001b[39m\n",
@@ -175,7 +175,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  dataset = \u001b[31mcol_character()\u001b[39m,\n",
       "  f1_macro_majority = \u001b[32mcol_double()\u001b[39m,\n",
@@ -185,7 +185,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  model = \u001b[32mcol_double()\u001b[39m,\n",
       "  ref_score = \u001b[32mcol_double()\u001b[39m\n",
@@ -193,7 +193,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  mean_imp_0 = \u001b[32mcol_double()\u001b[39m,\n",
@@ -210,14 +210,14 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
       ")\n",
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
@@ -227,7 +227,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  module = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_cor = \u001b[32mcol_double()\u001b[39m,\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dressed-parking",
+   "id": "facial-smooth",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "horizontal-manor",
+   "id": "useful-stuart",
    "metadata": {},
    "source": [
     "## DEG"
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "confident-renewal",
+   "id": "naughty-flexibility",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operational-garden",
+   "id": "hundred-candidate",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "individual-sullivan",
+   "id": "proof-villa",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extreme-prison",
+   "id": "directed-championship",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "played-joseph",
+   "id": "primary-passport",
    "metadata": {},
    "source": [
     "## Welch ANOVA"
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "encouraging-handle",
+   "id": "virgin-advance",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-korea",
+   "id": "alike-corner",
    "metadata": {},
    "source": [
     "## MI"
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "administrative-fleece",
+   "id": "amazing-baseline",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "streaming-chapel",
+   "id": "continued-conditioning",
+   "metadata": {},
+   "source": [
+    "## Bicor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "utility-favor",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>$n</strong> = 32"
+      ],
+      "text/latex": [
+       "\\textbf{\\$n} = 32"
+      ],
+      "text/markdown": [
+       "**$n** = 32"
+      ],
+      "text/plain": [
+       "$n\n",
+       "[1] 32\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "bicor_meta_df <- network_mm_gs_df %>%\n",
+    "    condense_figo(include_pvals = TRUE) %>%\n",
+    "    dplyr::select(one_of(\"geneID\", \"module\", \"mm_pval\"), contains(\"figo\")) %>%\n",
+    "    dplyr::filter(figo_min_qval < 0.1)\n",
+    "\n",
+    "bicor_meta_ls <- list(n = nrow(bicor_meta_df), genes = bicor_meta_df$geneID)\n",
+    "bicor_meta_ls[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hundred-variety",
    "metadata": {},
    "source": [
     "# ML baselines"
@@ -522,8 +566,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "mobile-opposition",
+   "execution_count": 12,
+   "id": "beneficial-bookmark",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sublime-pearl",
+   "id": "competitive-remark",
    "metadata": {},
    "source": [
     "# LR (L1)"
@@ -596,8 +640,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "circular-rebel",
+   "execution_count": 13,
+   "id": "olive-validation",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authentic-contract",
+   "id": "overhead-stationery",
    "metadata": {},
    "source": [
     "## How do uni/multivariate analyses overlap?"
@@ -667,8 +711,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "metallic-pickup",
+   "execution_count": 14,
+   "id": "biblical-adaptation",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nearby-plymouth",
+   "id": "manual-arthur",
    "metadata": {},
    "source": [
     "# Multinomial (EN)"
@@ -742,17 +786,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "optimum-insert",
+   "execution_count": 15,
+   "id": "consistent-handy",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "20"
+      ],
+      "text/latex": [
+       "20"
+      ],
+      "text/markdown": [
+       "20"
+      ],
+      "text/plain": [
+       "[1] 20"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "en_multinom_meta_ls <- list(genes = en_multinom_results_df$geneID)"
+    "en_multinom_meta_ls <- list(n = nrow(en_multinom_results_df), genes = en_multinom_results_df$geneID)\n",
+    "en_multinom_meta_ls$n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "departmental-burning",
+   "id": "dimensional-shepherd",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -760,8 +824,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "divine-selection",
+   "execution_count": 16,
+   "id": "arabic-chart",
    "metadata": {},
    "outputs": [
     {
@@ -781,8 +845,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "amended-notification",
+   "execution_count": 17,
+   "id": "shaped-scroll",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subjective-aaron",
+   "id": "domestic-procurement",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -836,8 +900,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "brown-explanation",
+   "execution_count": 18,
+   "id": "outdoor-carrier",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finite-cartoon",
+   "id": "global-bernard",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -895,8 +959,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "interstate-cisco",
+   "execution_count": 19,
+   "id": "wooden-refund",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,9 +969,12 @@
     "# umsmg_list <- lr_l1_meta_ls$genes %>%\n",
     "#     union(anova_meta_ls$genes) %>%\n",
     "#     union(mi_meta_ls$genes)\n",
+    "# umsmg_list <- en_multinom_meta_ls$genes %>%\n",
+    "#     union(anova_meta_ls$genes) %>%\n",
+    "#     union(mi_meta_ls$genes)\n",
     "umsmg_list <- en_multinom_meta_ls$genes %>%\n",
     "    union(anova_meta_ls$genes) %>%\n",
-    "    union(mi_meta_ls$genes)\n",
+    "    union(bicor_meta_ls$genes)\n",
     "\n",
     "nsmg_list <- wgcna_meta_ls$genes\n",
     "umsmg_demg_list <- umsmg_list %>%\n",
@@ -919,8 +986,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "liked-result",
+   "execution_count": 20,
+   "id": "written-knitting",
    "metadata": {},
    "outputs": [
     {
@@ -962,16 +1029,16 @@
     {
      "data": {
       "text/html": [
-       "72"
+       "55"
       ],
       "text/latex": [
-       "72"
+       "55"
       ],
       "text/markdown": [
-       "72"
+       "55"
       ],
       "text/plain": [
-       "[1] 72"
+       "[1] 55"
       ]
      },
      "metadata": {},
@@ -998,16 +1065,16 @@
     {
      "data": {
       "text/html": [
-       "47"
+       "32"
       ],
       "text/latex": [
-       "47"
+       "32"
       ],
       "text/markdown": [
-       "47"
+       "32"
       ],
       "text/plain": [
-       "[1] 47"
+       "[1] 32"
       ]
      },
      "metadata": {},
@@ -1062,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integrated-apache",
+   "id": "classical-principal",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -1070,8 +1137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "canadian-mayor",
+   "execution_count": 21,
+   "id": "contained-flooring",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "initial-literature",
+   "id": "light-pharmacy",
    "metadata": {},
    "outputs": [],
    "source": []
