Isolated figo point-biserial correlation notebook.

--- a/feature_selection_analysis/coxph_en.ipynb
+++ b/feature_selection_analysis/coxph_en.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "capital-drove",
+   "id": "respective-international",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "italic-palmer",
+   "id": "hawaiian-vatican",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "elegant-acceptance",
+   "id": "champion-episode",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "latin-hawaiian",
+   "id": "particular-instrument",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "narrow-forth",
+   "id": "atomic-neighborhood",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
     "    dplyr::select(c(\"geneID\", filtered_survival_df$sample_name)) %>%\n",
     "    transpose_df(\"geneID\", \"sample_name\")\n",
     "# Combine survival data and normalized count data\n",
-    "filtered_joined_df <- filtered_survival_df %>%\n",
+    "joined_df <- filtered_survival_df %>%\n",
     "    inner_join(norm_matrisome_counts_t_df, by = \"sample_name\") %>%\n",
     "#     select(one_of(\"sample_name\", \"vital_status\", \"survival_time\", umsmg_demg_list)) %>%\n",
     "    # cannot have survival times of 0\n",
@@ -193,29 +193,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "healthy-divorce",
+   "execution_count": 7,
+   "id": "hundred-resident",
    "metadata": {},
    "outputs": [],
    "source": [
     "y <- as.matrix(\n",
-    "    filtered_joined_df %>%\n",
+    "    joined_df %>%\n",
     "        dplyr::select(survival_time, vital_status) %>%\n",
     "        dplyr::rename(time = survival_time, status = vital_status)\n",
     ")\n",
-    "rownames(y) <- filtered_joined_df$sample_name\n",
+    "rownames(y) <- joined_df$sample_name\n",
     "\n",
     "x <- as.matrix(\n",
-    "    filtered_joined_df %>%\n",
+    "    joined_df %>%\n",
     "        dplyr::select(-c(sample_name, vital_status, survival_time))\n",
     ")\n",
-    "rownames(x) <- filtered_joined_df$sample_name"
+    "rownames(x) <- joined_df$sample_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "pharmaceutical-daniel",
+   "execution_count": 8,
+   "id": "overall-consumer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,8 +232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "functioning-tower",
+   "execution_count": 9,
+   "id": "advised-toddler",
    "metadata": {},
    "outputs": [
     {
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "numerical-conflict",
+   "execution_count": 10,
+   "id": "fresh-textbook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "boolean-fireplace",
+   "execution_count": 11,
+   "id": "textile-skiing",
    "metadata": {},
    "outputs": [
     {
@@ -545,8 +545,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "permanent-variety",
+   "execution_count": null,
+   "id": "pressing-decimal",
    "metadata": {},
    "outputs": [],
    "source": [
